--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="Font-Awesome-3.2.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/promo.css">
     <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
     <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 
@@ -23,32 +24,37 @@
 <header>
     <div class="merge">
     </div>
-    <div class="row">
-        <div class="col-md-12 header-p">
-            <p>Looking for the React Europe showbag? <span>Get it here</span></p>
-            <div class="icon-angle-right"></div>
+    <div class="container">
+
+
+        <div class="row">
+            <div class="col-md-12 header-p fadeInDown wow" data-wow-duration="0.5s" data-wow-delay="2s">
+                <p>Looking for the React Europe showbag? <span>Get it here</span></p>
+                <div class="icon-angle-right"></div>
+            </div>
         </div>
-    </div>
 
-    <div class="logo">
-        <div class="logo-tm">tm</div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-8 col-md-offset-3">
-            <h1>We create digital products</h1>
-            <h4>Design, development and expertise on tap.</h4>
+        <div class="logo">
+            <div class="logo-tm fadeInUp wow" data-wow-duration="0.5s" data-wow-delay="0.5s">tm</div>
         </div>
-    </div>
 
-    <div class="icon-angle-down icon-3x"></div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2 row-p">
+                <h1 class="fadeInUp wow" data-wow-duration="0.5s" data-wow-delay="1s">We create digital products</h1>
+                <h4 class="fadeInUp wow" data-wow-duration="0.5s" data-wow-delay="1.5s">Design, development and
+                    expertise on tap.</h4>
+            </div>
+        </div>
+
+        <div class="icon-angle-down icon-3x fadeInDown wow" data-wow-duration="1s" data-wow-delay="2s"></div>
+    </div>
 </header>
 <nav>
     <div class="nav navbar-default navbar-fixed-top">
-        <div class="container container-nav">
+        <div class="container-nav">
             <div class="logo-tm logo-nav">tm</div>
             <span>Thinkmill</span>
-            <a href="http://www.baidu.com" class="btn btn-empty btn-empty-xs btn-empty-info right-button">
+            <a href="http://www.baidu.com" class="btn btn-empty btn-empty-xs btn-empty-info right-button default-button">
                 GET IN TOUCH
             </a>
         </div>
@@ -237,29 +243,17 @@
                         to help high school students learn new languages.</p>
                 </article>
             </div>
-            <!--<div class="hr col-md-10 col-md-offset-1"></div>-->
-            <!--<div class="col-md-5 col-md-offset-1 img-margin">-->
-                <!--<div class="img-con2">-->
-                    <!--<img src="img/work-sydjs.png">-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-md-5 col-md-offset-1">-->
-                <!--<article class="sub-section article-margin">-->
-                    <!--<p>Macmillan Education</p>-->
-                    <!--<p>We worked closely with Macmillan Education-->
-                        <!--Australia and Prismatik to develop a mobile content publishing platform-->
-                        <!--to help high school students learn new languages.</p>-->
-                <!--</article>-->
-            <!--</div>-->
+
         </div>
 
     </div>
 </section>
 <section class="help background-white">
     <div class="col-md-6 col-md-offset-3 ">
-        <h1>Working on something interesting?</h1>
-        <h2>We’d love to help you build it.</h2>
-        <a href="www.baidu.com" class="btn btn-empty btn-empty-info btn-defalut main-button" type="button">
+        <h1 class="fadeInUp wow" data-wow-duration="0.5s" data-wow-delay="0.5s">Working on something interesting?</h1>
+        <h2 class="fadeInUp wow" data-wow-duration="0.5s" data-wow-delay="0.7s">We’d love to help you build it.</h2>
+        <a href="http://www.baidu.com" class="btn btn-empty btn-empty-info btn-defalut main-button fadeInUp wow"
+           data-wow-duration="0.5s" data-wow-delay="1s" type="button">
             GET IN TOUCH
         </a>
     </div>
@@ -326,18 +320,19 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 intrduction-pic">
-                <div class="img-con3">
-                    <img src="img/sponsor-campjs.png">
-                </div>
-                <div class="img-con3">
-                    <img src="img/sponsor-jsconf.png">
-                </div>
-                <div class="img-con3">
-                    <img src="img/sponsor-reacteu.png">
-                </div>
-                <div class="img-con3">
+                <div class="img-con3 fadeInUp wow" data-wow-duration="0.5s" data-wow-delay="0.5s">
                     <img src="img/sponsor-sydjs.png">
                 </div>
+                <div class="img-con3 fadeInUp wow" data-wow-duration="0.5s" data-wow-delay="0.7s">
+                    <img src="img/sponsor-campjs.png">
+                </div>
+                <div class="img-con3 fadeInUp wow" data-wow-duration="0.5s" data-wow-delay="0.9s">
+                    <img src="img/sponsor-jsconf.png">
+                </div>
+                <div class="img-con3 fadeInUp wow" data-wow-duration="0.5s" data-wow-delay="1.1s">
+                    <img src="img/sponsor-reacteu.png">
+                </div>
+
 
             </div>
         </div>
@@ -345,9 +340,9 @@
 </section>
 <section class="react background-white">
     <div class="logo-react">
-    <div class="react-logo">
-        <img src="img/react-europe-app-logo.png">
-    </div>
+        <div class="react-logo">
+            <img src="img/react-europe-app-logo.png">
+        </div>
     </div>
     <div class="container">
         <div class="row">
@@ -358,9 +353,11 @@
                 <h2>Running a conference? Learning React? Thinking about hybrid apps and Cordova?</h2>
                 <p>Here's a bag of freebies to get you on your way.</p>
             </div>
-            <a href="#" class="btn right-button btn-move">
-                GET IT HERE
-            </a>
+            <div class="col-md-12 btn-center">
+                <a href="#" class="btn default-button btn-move">
+                    GET IT HERE
+                </a>
+            </div>
 
         </div>
 
@@ -385,7 +382,7 @@
                 </div>
                 <h1>KeystoneJS</h1>
                 <h2>Node.js CMS and web application platform</h2>
-                <a href="#" class="footer-button footer-button btn btn-empty btn-empty-info">
+                <a href="#" class=" footer-button btn btn-empty btn-empty-info">
                     LEARN MORE
                 </a>
             </div>
@@ -405,7 +402,9 @@
         <div class="container">
             <div class="logo-tm logo-nav footer-logo">tm</div>
             <span>Thinkmill</span>
-            <div class="col-md-6 col-md-offset-2 footer-foot">Level 10, 191 Clarence St, Sydney NSW 2000 · hello@thinkmill.com.au</div>
+            <div class="col-md-6 col-md-offset-2 footer-foot">Level 10, 191 Clarence St, Sydney NSW 2000 ·
+                hello@thinkmill.com.au
+            </div>
             <div class="col-md-4 footer-foot">PROJECT ENQUIRIES</div>
 
         </div>
@@ -418,6 +417,17 @@
 <script src="js/swiper.animate1.0.2.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="js/promo.js"></script>
+<script src="js/wow.js"></script>
+<script>
+    var wow = new WOW({
+        boxClass: 'wow',
+        animateClass: 'animated',
+        offset: 0,
+        mobile: true,
+        live: true
+    });
+    wow.init();
+</script>
 
 </body>
 </html>
