箭头的跳转

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="icon-angle-down icon-3x fadeInDown wow" data-wow-duration="1s" data-wow-delay="2s"></div>
+        <a class="icon-angle-down icon-3x fadeInDown wow" data-wow-duration="1s" data-wow-delay="2s" href="#seconed"> </a>
     </div>
 </header>
 <nav>
@@ -60,7 +60,7 @@
         </div>
     </div>
 </nav>
-<section class="background-white">
+<section class="background-white" id="seconed">
     <div class="container-fluid">
         <div class="row">
             <article class="col-md-8 col-md-offset-2 container-space">
